fix: :bug: fix bg not showing issue

--- a/style.scss
+++ b/style.scss
@@ -3,6 +3,11 @@
     margin: 0;
 }
 
+:root {
+    --cursor-x: 0;
+    --cursor-y: 0;
+}
+
 html,
 body {
   height: 100vh;
@@ -48,7 +53,6 @@ img {
     right: 0;
     width: 100%;
     height: 100%;
-    z-index: -1;
     display: block;
 
     background-image: url('../assets/bg.jpg');
@@ -69,6 +73,8 @@ img {
     
     display: flex;
     flex-direction: column;
+
+    z-index: 1;
 }
 
 .intro-username {
